Modifated InfinityStiry model,  change Icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">CyanideAndHappinessComixGenerator</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="app_name">Комикс</string>
+    <string name="title_genrator">Генератор</string>
+    <string name="title_manual_mode">Ручной режим</string>
+    <string name="title_infiniti_story">История</string>
+    <string name="generate_nutton_text">Новый</string>
 </resources>
